{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 421,
  "lineage": "56cb6629-5dc4-deb6-3b70-18c0213c55a2",
  "resources": [
    {
      "module": "module.service_node",
      "mode": "data",
      "type": "aws_subnet",
      "name": "master_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091420226771:subnet/subnet-10b3a43e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-10b3a43e",
            "map_public_ip_on_launch": true,
            "owner_id": "091420226771",
            "state": "available",
            "vpc_id": "vpc-72260208"
          }
        }
      ]
    },
    {
      "module": "module.prometheus_master",
      "mode": "managed",
      "type": "aws_eip",
      "name": "master_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f3af360e366a3a10",
            "domain": "vpc",
            "id": "eipalloc-02f45e10820f4cffe",
            "instance": "i-07a689b0636f0a709",
            "network_interface": "eni-065282982108cbaca",
            "private_dns": "ip-172-31-95-110.ec2.internal",
            "private_ip": "172.31.95.110",
            "public_dns": "ec2-54-145-167-146.compute-1.amazonaws.com",
            "public_ip": "54.145.167.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.provisioner",
            "module.prometheus_master.aws_iam_instance_profile.ec2_discovery_profile",
            "module.prometheus_master.aws_iam_role.ec2_discovery_role",
            "module.prometheus_master.aws_instance.prometheus_master",
            "module.prometheus_master.aws_security_group.master_http"
          ]
        }
      ]
    },
    {
      "module": "module.service_node",
      "mode": "managed",
      "type": "aws_eip",
      "name": "node_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0abdcb69a9783c5b5",
            "domain": "vpc",
            "id": "eipalloc-016a30ce1e6c61049",
            "instance": "i-0c962be18b59d1d7d",
            "network_interface": "eni-0a8c5d12690292a28",
            "private_dns": "ip-172-31-81-183.ec2.internal",
            "private_ip": "172.31.81.183",
            "public_dns": "ec2-3-210-87-162.compute-1.amazonaws.com",
            "public_ip": "3.210.87.162",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.provisioner",
            "module.service_node.aws_instance.service_node",
            "module.service_node.aws_security_group.node_access"
          ]
        }
      ]
    },
    {
      "module": "module.prometheus_master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "prometheus_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:091420226771:instance/i-07a689b0636f0a709",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2Discovery",
            "id": "i-07a689b0636f0a709",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "provisioner_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-065282982108cbaca",
            "private_dns": "ip-172-31-95-110.ec2.internal",
            "private_ip": "172.31.95.110",
            "public_dns": "ec2-52-207-238-66.compute-1.amazonaws.com",
            "public_ip": "52.207.238.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0014fdb8300c0b405",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-10b3a43e",
            "tags": {
              "Application": "Monitoring",
              "Environment": "Training",
              "Name": "flugel-grafana.ldelelis.dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c9101ece3aaf02e1"
            ]
          },
          "dependencies": [
            "aws_key_pair.provisioner",
            "module.prometheus_master.aws_iam_instance_profile.ec2_discovery_profile",
            "module.prometheus_master.aws_iam_role.ec2_discovery_role",
            "module.prometheus_master.aws_security_group.master_http"
          ]
        }
      ]
    },
    {
      "module": "module.service_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "service_node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:091420226771:instance/i-0c962be18b59d1d7d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c962be18b59d1d7d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "provisioner_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8c5d12690292a28",
            "private_dns": "ip-172-31-81-183.ec2.internal",
            "private_ip": "172.31.81.183",
            "public_dns": "ec2-54-82-236-126.compute-1.amazonaws.com",
            "public_ip": "54.82.236.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04953b902cdfd3ac2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "node_access"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-10b3a43e",
            "tags": {
              "Application": "Monitoring",
              "Environment": "Training",
              "Name": "flugel-node.ldelelis.dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c9cdf7aa74b776d7"
            ]
          },
          "dependencies": [
            "aws_key_pair.provisioner",
            "module.service_node.aws_security_group.node_access"
          ]
        }
      ]
    },
    {
      "module": "module.prometheus_master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091420226771:security-group/sg-0c9101ece3aaf02e1",
            "description": "Allows access to web resources via http and https",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9101ece3aaf02e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web",
            "name_prefix": null,
            "owner_id": "091420226771",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-72260208"
          }
        }
      ]
    },
    {
      "module": "module.service_node",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091420226771:security-group/sg-0c9cdf7aa74b776d7",
            "description": "Allows access to web resources via http and https and exporters",
            "egress": [],
            "id": "sg-0c9cdf7aa74b776d7",
            "ingress": [],
            "name": "node_access",
            "name_prefix": null,
            "owner_id": "091420226771",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-72260208"
          }
        }
      ]
    },
    {
      "module": "module.service_node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2883415630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9cdf7aa74b776d7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.service_node.aws_security_group.node_access"
          ]
        }
      ]
    },
    {
      "module": "module.service_node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1658054651",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9cdf7aa74b776d7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.service_node.aws_security_group.node_access"
          ]
        }
      ]
    },
    {
      "module": "module.service_node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_node_exporter",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.80.0/20"
            ],
            "description": null,
            "from_port": 9100,
            "id": "sgrule-523411372",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9cdf7aa74b776d7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9100,
            "type": "ingress"
          },
          "dependencies": [
            "aws_key_pair.provisioner",
            "module.prometheus_master.aws_iam_instance_profile.ec2_discovery_profile",
            "module.prometheus_master.aws_iam_role.ec2_discovery_role",
            "module.prometheus_master.aws_instance.prometheus_master",
            "module.prometheus_master.aws_security_group.master_http",
            "module.service_node.aws_security_group.node_access"
          ]
        }
      ]
    },
    {
      "module": "module.service_node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outgoing",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1290972000",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c9cdf7aa74b776d7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.service_node.aws_security_group.node_access"
          ]
        }
      ]
    },
    {
      "module": "module.service_node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-492254203",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9cdf7aa74b776d7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.service_node.aws_security_group.node_access"
          ]
        }
      ]
    }
  ]
}